[API CHANGE] tdf#122152 set dialog parent

Change-Id: I15f6d577c3584d28f667a04b5571de80effe53fe
Reviewed-on: https://gerrit.libreoffice.org/65274
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 0a9917b756cf49b117766c9236a7bf63d6d4b607)
Reviewed-on: https://gerrit.libreoffice.org/65328